# routes/studylist.js
@@ -2,12 +2,12 @@ const router = require('express').Router();
 const StudyController = require('../controllers/StudyController')
 
 //스터디 리스트 조회
-router.get('/',StudyController.showStudy)
+router.get('/', StudyController.showStudy)
 //스터디 상세 조회
-router.get('/:studyId',StudyController.detailStudy)
+router.get('/:studyId', StudyController.detailStudy)
 //스터디 삭제
-router.delete('/:studyId',StudyController.deleteStudy)
+router.delete('/:studyId', StudyController.deleteStudy)
 //스터디 수정
-router.put('/:studyId',StudyController.updateStudy)
+router.put('/:studyId', StudyController.updateStudy)
 
 module.exports = router;
