# swagger-output.json
@@ -57,15 +57,19 @@
                 },
                 "studyTime": {
                   "type": "array",
-                  "example": ["월 13-15, 금 17-19"]
+                  "example": ["월 13-15", "금 17-19"]
                 },
                 "peopleNum": {
                   "type": "number",
                   "example": 5
                 },
                 "requiredInfo": {
-                  "type": "array",
+                  "type":"array",
                   "example": ["성별, 관심분야, 지원동기"]
+                },
+                "deadline": {
+                  "type":"date",
+                  "example": "2021-11-01"
                 }
               }
             }
@@ -76,6 +80,212 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/study/search": {
+      "get": {
+        "tags": ["/study"],
+        "description": "스터디 검색하기 (스터디 이름 검색)",
+        "parameters": [
+          {
+            "name": "option",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "content",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/studylist/": {
+      "get": {
+        "tags": ["/studylist"],
+        "description": "스터디 리스트 보기",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/studylist/{studyId}": {
+      "get": {
+        "tags": ["/studylist"],
+        "description": "스터디 상세보기",
+        "parameters": [
+          {
+            "name": "studyId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["/studylist"],
+        "description": "스터디 삭제하기",
+        "parameters": [
+          {
+            "name": "studyId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": ["/studylist"],
+        "description": "스터디 수정하기",
+        "parameters": [
+          {
+            "name": "studyId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "studyName": {
+                  "type": "string",
+                  "example": "IT 경영스터디"
+                },
+                "category": {
+                  "type": "array",
+                  "example": ["IT","경영"]
+                },
+                "description": {
+                  "type": "string",
+                  "example": "IT 경영 스터디입니다."
+                },
+                "onoff": {
+                  "type": "string",
+                  "example": "online"
+                },
+                "studyTime": {
+                  "type": "array",
+                  "example": ["월 13-15", "금 17-19"]
+                },
+                "peopleNum": {
+                  "type": "number",
+                  "example": 5
+                },
+                "requiredInfo": {
+                  "type":"array",
+                  "example": ["성별, 관심분야, 지원동기"]
+                },
+                "deadline": {
+                  "type":"date",
+                  "example": "2021-11-01"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/kakao": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "profileImage": {
+                  "example": "any"
+                },
+                "accessToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/auth/nickname": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "nickName": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {}
       }
     }
   },
